# ghostmap

./: .env.example  .gitignore  README.md  docker-compose.yml  mitmproxy-ca-cert.pem
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/ai/: base.py  orchestrator.py
backend/app/ai/agents/: __init__.py  flow_analyzer.py  heatmap_classifier.py  hypothesis_generator.py  trust_boundary_detector.py
backend/app/ai/policies/: flow_analyzer.yaml  heatmap_classifier.yaml  hypothesis_generator.yaml  trust_boundary_detector.yaml
backend/app/ai/providers/: __init__.py  anthropic_provider.py  gemini_provider.py  ollama_provider.py  openrouter_provider.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: ai.py  graph.py  projects.py  replay.py  requests.py  roles.py  sessions.py  ws.py
backend/app/core/: events.py  exceptions.py  logging.py  security.py
backend/app/db/: neo4j_client.py  postgres.py  redis_client.py
backend/app/models/: __init__.py  finding.py  project.py  replay.py  request.py  session.py
backend/app/schemas/: __init__.py  ai.py  graph.py  project.py  request.py  role_diff.py  session.py
backend/app/services/: ai_service.py  graph_service.py  heatmap_service.py  replay_service.py  role_diff_service.py
backend/app/workers/: ai_indexer.py  graph_projector.py  persistor.py  runner.py
capture/: Dockerfile.browser  Dockerfile.proxy  requirements.browser.txt
docs/: ARCHITECTURE.md  DATA_FLOW.md  MODULES.md
frontend/: next.config.js  package.json  tailwind.config.ts
(+37 files in other folders)
