[project]
name = "ghostmap-backend"
version = "0.1.0"
description = "GhostMap backend — API + event consumers + AI orchestrator"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "neo4j>=5.24",
    "redis>=5.0",
    "httpx>=0.27",
    "websockets>=13",
    "python-ulid>=3.0",
    "orjson>=3.10",
    "anthropic>=0.39",
    "google-generativeai>=0.8",
    "ollama>=0.3",
    "pyjwt[crypto]>=2.9",
    "structlog>=24.4",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E","F","W","I","UP","B","SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
